--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<h1 class="code-line" data-line-start=0 data-line-end=1 ><a id="Papyon_Games_0"></a>Papyon Games</h1>
-<p class="has-line-data" data-line-start="1" data-line-end="2"><img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/kralokey.png" alt="Kral Okey"></p>
-<p class="has-line-data" data-line-start="3" data-line-end="4"><a href="https://papyongames.github.io/privacy_policy" title="Privacy Policy">Privacy Policy</a></p>
-<p class="has-line-data" data-line-start="5" data-line-end="6"><a href="mailto:brkkyk@gmail.com">Contact Us</a></p>
+<html>
+  <head>
+    <title>Papyon Games</title>
+  </head>
+  <body>
+    <div style="flex: 1; align-items: center; justify-content: center;">
+      <img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/papyon.png" alt="Papyon Games">
+      <img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/kral.png" alt="Kral Okey">
+      <p class="has-line-data" data-line-start="3" data-line-end="4"><a href="https://papyongames.github.io/privacy_policy" title="Privacy Policy">Privacy Policy</a></p>
+      <p class="has-line-data" data-line-start="5" data-line-end="6"><a href="mailto:brkkyk@gmail.com">Contact Us</a></p>
+    </div>
+  </body>
+</html>
