--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
   <head>
     <title>Papyon Games</title>
   </head>
-  <body>
-    <div style="flex: 1; align-items: center; justify-content: center;">
-      <img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/papyon.png" alt="Papyon Games">
-      <img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/kral.png" alt="Kral Okey">
-      <p class="has-line-data" data-line-start="3" data-line-end="4"><a href="https://papyongames.github.io/privacy_policy" title="Privacy Policy">Privacy Policy</a></p>
-      <p class="has-line-data" data-line-start="5" data-line-end="6"><a href="mailto:brkkyk@gmail.com">Contact Us</a></p>
+  <body style="background-color: #000000">
+      <center><img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/papyon.png" height=200 width=280 alt="Papyon Games"></center>
+      <br/>
+      <center><img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/kral.png" height=200 width=200 alt="Kral Okey"></center>
+      <br/>
+      <center><p class="has-line-data" data-line-start="3" data-line-end="4"><a href="https://papyongames.github.io/privacy_policy" style="color: white;" title="Privacy Policy">Privacy Policy</a></p></center>
+      <center><p class="has-line-data" data-line-start="5" data-line-end="6"><a href="mailto:brkkyk@gmail.com" style="color: white;">Contact Us</a></p></center>
     </div>
   </body>
 </html>
