--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
     <title>Papyon Games</title>
   </head>
   <body style="background-color: #000000">
-      <center><img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/papyon.png" height=200 width=280 alt="Papyon Games"></center>
+	  <center><img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/papyon.png" height=200 width=280 alt="Papyon Games"></center>
+	  <br/>
+	  <br/>
+	  <br/>
+	  <br/>
+	  <center>
+      <img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/kral.png" height=200 width=200 alt="Kral Okey">
       <br/>
-      <center><img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/kral.png" height=200 width=200 alt="Kral Okey"></center>
-      <br/>
-      <center><p class="has-line-data" data-line-start="3" data-line-end="4"><a href="https://papyongames.github.io/privacy_policy" style="color: white;" title="Privacy Policy">Privacy Policy</a></p></center>
-      <center><p class="has-line-data" data-line-start="5" data-line-end="6"><a href="mailto:brkkyk@gmail.com" style="color: white;">Contact Us</a></p></center>
+      <a href="https://play.google.com/store/apps/details?id=com.papyon.kralokey">
+        <img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/play.png" height=200 width=200 alt="Kral Okey">
+      </a>
+      <a href="https://apps.apple.com/us/app/kral-okey/id1499280869">
+        <img src="https://raw.githubusercontent.com/papyongames/papyongames.github.io/master/apple.png" height=200 width=200 alt="Kral Okey">
+      </a>
+    </center>
+	  <br/>
+	  <center><p class="has-line-data" data-line-start="3" data-line-end="4"><a href="https://papyongames.github.io/privacy_policy" style="color: white;" title="Privacy Policy">Privacy Policy</a></p></center>
+	  <center><p class="has-line-data" data-line-start="5" data-line-end="6"><a href="mailto:brkkyk@gmail.com" style="color: white;">Contact Us</a></p></center>
     </div>
   </body>
 </html>
+
